--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "gatsby": "^2.24.91",
     "gatsby-source-filesystem": "2.3.37",
     "gatsby-transformer-remark": "2.8.47",
+    "highlight.js": "10.3.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-markdown": "5.0.2"
+    "react-markdown": "5.0.2",
+    "react-syntax-highlighter": "15.3.0"
   },
   "devDependencies": {
     "prettier": "2.1.2"
