--- a/package.json
+++ b/package.json
@@ -15,16 +15,20 @@
   },
   "dependencies": {
     "gatsby": "^2.24.91",
+    "gatsby-plugin-layout": "1.3.13",
+    "gatsby-plugin-postcss": "3.0.4",
     "gatsby-source-filesystem": "2.3.37",
     "gatsby-transformer-remark": "2.8.47",
     "highlight.js": "10.3.2",
+    "postcss": "8.1.4",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-markdown": "5.0.2",
     "react-syntax-highlighter": "15.3.0"
   },
   "devDependencies": {
-    "prettier": "2.1.2"
+    "prettier": "2.1.2",
+    "tailwindcss": "1.9.6"
   },
   "repository": {
     "type": "git",
