--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "start": "npm run develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
+    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1",
+    "lint": "eslint --ignore-path .gitignore . --ext ts --ext tsx --ext js --ext jsx"
   },
   "dependencies": {
     "gatsby": "^2.24.91",
     "gatsby-plugin-layout": "1.3.13",
     "gatsby-plugin-postcss": "3.0.4",
+    "gatsby-plugin-typescript": "2.6.0",
     "gatsby-source-filesystem": "2.3.37",
     "gatsby-transformer-remark": "2.8.47",
     "highlight.js": "10.3.2",
@@ -27,8 +29,20 @@
     "react-syntax-highlighter": "15.3.0"
   },
   "devDependencies": {
+    "@types/node": "14.14.7",
+    "@types/react": "16.9.56",
+    "@types/react-dom": "16.9.9",
+    "@types/react-syntax-highlighter": "13.5.0",
+    "@typescript-eslint/eslint-plugin": "4.7.0",
+    "@typescript-eslint/parser": "4.7.0",
+    "eslint": "7.13.0",
+    "eslint-config-prettier": "6.15.0",
+    "eslint-plugin-prettier": "3.1.4",
+    "eslint-plugin-react": "7.21.5",
+    "gatsby-plugin-codegen": "1.2.14",
     "prettier": "2.1.2",
-    "tailwindcss": "1.9.6"
+    "tailwindcss": "1.9.6",
+    "typescript": "4.0.5"
   },
   "repository": {
     "type": "git",
