--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gatsby": "^2.24.91",
     "gatsby-plugin-layout": "1.3.13",
     "gatsby-plugin-postcss": "3.0.4",
+    "gatsby-plugin-react-helmet-async": "1.1.0",
     "gatsby-plugin-typescript": "2.6.0",
     "gatsby-source-filesystem": "2.3.37",
     "gatsby-transformer-remark": "2.8.47",
@@ -25,6 +26,7 @@
     "postcss": "8.1.4",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-helmet-async": "1.0.7",
     "react-markdown": "5.0.2",
     "react-syntax-highlighter": "15.3.0"
   },
