--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "eslint-plugin-react": "7.21.5",
     "prettier": "2.1.2",
     "tailwindcss": "1.9.6",
+    "postcss-import": "^13.0.0",
+    "postcss-nested": "^5.0.1",
     "typescript": "4.0.5"
   },
   "repository": {
