--- a/crowdin.yml
+++ b/crowdin.yml
@@ -1,3 +1,3 @@
 files:
   - source: /src/content/en/tutorial
-    translation: /src/content/%two_letters_code%/%original_file_name%
+    translation: /src/content/%two_letters_code%/tutorial/%original_file_name%
